add/activity finish status
